trunk/Archive2/5e/db52d225cf0f97/output
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of 'void std::__sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = std::_List_iterator<long unsigned int>; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<MyFunctor>]':
/usr/local/include/c++/4.9.0/bits/stl_algo.h:4707:78:   required from 'void std::sort(_RAIter, _RAIter, _Compare) [with _RAIter = std::_List_iterator<long unsigned int>; _Compare = MyFunctor]'
main.cpp:14:47:   required from 'static void SortTraits<container_type>::sort(container_type<long unsigned int>&, comparator_type) [with comparator_type = MyFunctor; container_type = container_template]'
main.cpp:45:66:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: error: no match for 'operator-' (operand types are 'std::_List_iterator<long unsigned int>' and 'std::_List_iterator<long unsigned int>')
     std::__lg(__last - __first) * 2,
                      ^
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:328:5: note: template<class _Iterator> typename std::reverse_iterator<_Iterator>::difference_type std::operator-(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_Iterator>&)
     operator-(const reverse_iterator<_Iterator>& __x,
     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:328:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: note:   'std::_List_iterator<long unsigned int>' is not derived from 'const std::reverse_iterator<_Iterator>'
     std::__lg(__last - __first) * 2,
                      ^
In file included from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:380:5: note: template<class _IteratorL, class _IteratorR> decltype ((__y.base() - __x.base())) std::operator-(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_IteratorR>&)
     operator-(const reverse_iterator<_IteratorL>& __x,
     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:380:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: note:   'std::_List_iterator<long unsigned int>' is not derived from 'const std::reverse_iterator<_Iterator>'
     std::__lg(__last - __first) * 2,
                      ^
In file included from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:1136:5: note: template<class _IteratorL, class _IteratorR> decltype ((__x.base() - __y.base())) std::operator-(const std::move_iterator<_Iterator>&, const std::move_iterator<_IteratorR>&)
     operator-(const move_iterator<_IteratorL>& __x,
     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:1136:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: note:   'std::_List_iterator<long unsigned int>' is not derived from 'const std::move_iterator<_Iterator>'
     std::__lg(__last - __first) * 2,
                      ^
In file included from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:1143:5: note: template<class _Iterator> decltype ((__x.base() - __y.base())) std::operator-(const std::move_iterator<_Iterator>&, const std::move_iterator<_Iterator>&)
     operator-(const move_iterator<_Iterator>& __x,
     ^
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:1143:5: note:   template argument deduction/substitution failed:
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.0/bits/stl_algo.h:1968:22: note:   'std::_List_iterator<long unsigned int>' is not derived from 'const std::move_iterator<_Iterator>'
     std::__lg(__last - __first) * 2,
                      ^
In file included from /usr/local/include/c++/4.9.0/vector:65:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/stl_bvector.h:208:3: note: std::ptrdiff_t std::operator-(const std::_Bit_iterator_base&, const std::_Bit_iterator_base&)
   operator-(const _Bit_iterator_base& __x, const _Bit_iterator_base& __y)
   ^
/usr/local/include/c++/4.9.0/bits/stl_bvector.h:208:3: note:   no known conversion for argument 1 from 'std::_List_iterator<long unsigned int>' to 'const std::_Bit_iterator_base&'
